--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>tourist
     </title>
 </head>
-<body background="assests/image/homeeeeeeeeeeeeeeeeeeeeeeee.webp" height="1000px" width="1000px">
+<body background="assests/image/home.webp" height="1000px" width="1000px">
     <center>
         <a href="">HOME</a> | 
         <a href="">ABOUT</a> |
